# doc-agent

./: .gitignore  README.md  ROADMAP.md  makefile  pyproject.toml
docker/: .dockerignore  Dockerfile.streamlit  docker-compose.aws.yml  docker-compose.local.yml  docker-compose.yml  requirements.streamlit.txt  start_streamlit.sh
notebooks/: 001_docling_pdf_parsing.ipynb  002_semantic_normalization.ipynb  003_docling_ast_xml_anchoring.ipynb  004_additional_testing_cases_1.ipynb  004_additional_testing_cases_2.ipynb  004_additional_testing_cases_3.ipynb  004_additional_testing_cases_4.ipynb  004_additional_testing_cases_5.ipynb  004_additional_testing_cases_6.ipynb  005_orchestrator_test.ipynb  006_pdf_processor_test.ipynb  007_pdf_to_markdown_test_1.ipynb  007_pdf_to_markdown_test_2.ipynb  008_aggregation_and_chunking_test.ipynb  009_retrieval_stack_rationale.ipynb
notebooks/prompts/stable/: semantic_normalization_native_cot_tagged_pue.md  semantic_normalization_native_cot_tagged_stable.md  semantic_normalization_native_cot_tagged_stable_gpt5mini.md
notebooks/utils/: display_diff.py  encode_image.py  extract_page.py  genetate_tagged_markdown.py  parse_document.py
pipelines/: pipeline.py
src/doc_agent/agents/: agentic_answer_agent.py  answer_generator.py  ocr_healer.py
src/doc_agent/configs/: settings.py
src/doc_agent/indexing/: embedder.py  qdrant_manager.py  structural_chunker.py
terraform/: ec2.tf  main.tf  rds.tf  s3.tf  variables.tf
tests/: test_manifest_manager.py  test_schemas.py
ui/: app.py
ui/.streamlit/: config.toml
(+25 files in other folders)
