[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc_agent"
version = "0.1.0"
description = "Agentic RAG system for engineering standards and technical documentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.43.23",
    "docling==2.86.0",
    "openai==2.32.0",
    "qdrant-client==1.18.0",
    "psycopg[binary,pool]==3.3.4",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "pypdfium2==5.7.0",
    "python-dotenv==1.2.2",
    "streamlit==1.57.0",
    "onnxruntime==1.25.1",
    "tiktoken==0.8.0",
    "Pillow==12.2.0",
    "numpy==2.4.3",
    "transformers==4.57.6"
]

[project.optional-dependencies]
# pip install -e ".[dev]"
dev = [
    "pytest==9.0.3",
    "pytest-cov==4.1.0",
    "ruff==0.3.0"
]

[tool.setuptools.packages.find]
where = ["src"]
